--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,19 @@ jobs:
    
     steps:
       - checkout
+
+      - run: 
+        name: Install Scanner
+        command: dotnet tool install dotnet-sonarscanner
+
+      - run: 
+        name: Begin Scanner
+        command: dotnet sonarscanner begin /k:"ProjectKey" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="a4d55ec7e11d17e0e2a60205253c802be07739b9"
+
       - run: dotnet build
       - run: dotnet test
+
+      - run:
+        name: End Scanner
+        command: dotnet sonarscanner end /d:sonar.login="a4d55ec7e11d17e0e2a60205253c802be07739b9"
 
