--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,9 @@
 version: 2.1
 
-orbs:
- win: circleci/windows@2.2.0
-
 jobs:
   build:
-    executor: win/default     
+    docker:
+      - image: mcr.microsoft.com/dotnet/core/sdk:3.1.4-alpine-arm64v8
    
     steps:
       - checkout
