--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - checkout
 
-      - run: dotnet tool install dotnet-sonarscanner
+      - run: dotnet tool install --global dotnet-sonarscanner
 
       - run: dotnet sonarscanner begin /k:"ProjectKey" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="a4d55ec7e11d17e0e2a60205253c802be07739b9"
 
