--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,16 +10,10 @@ jobs:
 
       - run: dotnet tool install --global dotnet-sonarscanner
 
-      - run: cd /.dotnet/tools
-
-      - run: pwd
-
-      - run: ls -l
-
-      - run: dotnet sonarscanner begin /k:"ProjectKey" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="a4d55ec7e11d17e0e2a60205253c802be07739b9"
+      - run: dotnet-sonarscanner begin /k:"ProjectKey" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="a4d55ec7e11d17e0e2a60205253c802be07739b9"
 
       - run: dotnet build
       - run: dotnet test
 
-      - run: dotnet sonarscanner end /d:sonar.login="a4d55ec7e11d17e0e2a60205253c802be07739b9"
+      - run: dotnet-sonarscanner end /d:sonar.login="a4d55ec7e11d17e0e2a60205253c802be07739b9"
 
