--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,10 @@ jobs:
 
       - run: dotnet tool install --global dotnet-sonarscanner
 
+      - run: cd /root/.dotnet/tools
+
+      - run: ls -l
+
       - run: dotnet-sonarscanner begin /k:"ProjectKey" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="a4d55ec7e11d17e0e2a60205253c802be07739b9"
 
       - run: dotnet build
