--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,10 +14,11 @@ jobs:
 
       - run: echo 'export PATH="$PATH:/root/.dotnet/tools"' >> $BASH_ENV
 
-      - run: dotnet sonarscanner begin /k:"ProjectKey" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="a4d55ec7e11d17e0e2a60205253c802be07739b9"
+      - run: dotnet sonarscanner begin "/k:ProjectKey" "/n:ProjectName" "/d:sonar.host.url=https://sonarcloud.io" "/d:sonar.login=a4d55ec7e11d17e0e2a60205253c802be07739b9"
 
       - run: dotnet build
-      - run: dotnet test
 
-      - run: dotnet sonarscanner end /d:sonar.login="a4d55ec7e11d17e0e2a60205253c802be07739b9"
+      - run: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
+
+      - run: dotnet sonarscanner end "/d:sonar.login=a4d55ec7e11d17e0e2a60205253c802be07739b9"
 
