--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
 
       - run: echo 'export PATH="$PATH:/root/.dotnet/tools"' >> $BASH_ENV
 
-      - run: dotnet sonarscanner begin "/k:Ab.ToDo.Api" "/n:ToDo Api" "/o:andreabertin" "/d:sonar.host.url=https://sonarcloud.io" "/d:sonar.login=a4d55ec7e11d17e0e2a60205253c802be07739b9"
+      - run: dotnet sonarscanner begin "/k:Ab.ToDo.Api" "/n:ToDo Api" "/o:" "/d:sonar.host.url=https://sonarcloud.io" "/d:sonar.login=a4d55ec7e11d17e0e2a60205253c802be07739b9"
 
       - run: dotnet build
 
