--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
 
       - run: echo 'export PATH="$PATH:/root/.dotnet/tools"' >> $BASH_ENV
 
-      - run: dotnet sonarscanner begin "/k:Ab.ToDo.Api" "/n:ToDo Api" "/o:microservices-test" "/d:sonar.host.url=https://sonarcloud.io" "/d:sonar.login=$SONARCLOUD_CC_LOGIN"
+      - run: dotnet sonarscanner begin "/k:andreabertin_todo-list-api" "/n:ToDo Api" "/o:andreabertin" "/d:sonar.host.url=https://sonarcloud.io" "/d:sonar.login=$SONARCLOUD_CC_LOGIN"
 
       - run: dotnet build
 
