--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,33 @@
 version: 2.1
 
-orbs:
- win: circleci/windows@2.2.0
-
 jobs:
   build:
-    executor: win/default     
-   
+    
+    docker:
+      - image: mcr.microsoft.com/dotnet/core/sdk
+      
     steps:
       - checkout
-      - run: dotnet build
-      - run: dotnet test
 
+      - run: apt-get update
+
+      - run: apt-get -y install default-jre
+
+      - run: dotnet tool install -g dotnet-sonarscanner
+
+      - run: echo 'export PATH="$PATH:/root/.dotnet/tools"' >> $BASH_ENV
+
+      - run: dotnet sonarscanner begin "/k:andreabertin_todo-list-api" "/n:ToDo Api" "/o:andreabertin" "/d:sonar.host.url=https://sonarcloud.io" "/d:sonar.login=$SONARCLOUD_CC_LOGIN"
+
+      - run: dotnet build
+
+      - run: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
+
+      - run: dotnet sonarscanner end "/d:sonar.login=$SONARCLOUD_CC_LOGIN"
+
+
+workflows:
+  sonar_cloud_workflow:
+    jobs:
+      - build:
+          context: SonarCloud 
